:lipstick: fixed game title on mobile view

--- a/src/style/_gameTitle.scss
+++ b/src/style/_gameTitle.scss
@@ -5,7 +5,7 @@ header {
   
     .big2-title {
       font-size: 8rem;
-      margin-left: 12%;
+      margin-left: 15%;
       // font-family: 'Great Vibes', cursive;
       // font-family: 'Satisfy', cursive;
       font-family: 'Shadows Into Light', cursive;
