--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,5 @@
-@import 'gameTitle'; 
-@import 'lobby-table'; 
 
+@media only screen and (max-width: 480px) {
+    @import 'gameTitle'; 
+    @import 'lobby-table'; 
+}
